# ClassManagementBack

./: Dockerfile  TODO.txt  app.py  build_db.sql  environment.py  gunicorn.conf.py  model.joblib  pyproject.toml
.github/workflows/: main_poc-class-management-back.yml
controller/: data_controller.py  user_controller.py
db/: config.py
exceptions/: log_data.py  user.py
helper/: parser.py  user.py
model/: data_model.py  user_model.py
schema/: common.py  data.py  user.py
service/: data_service.py  user_service.py
src/class_management_back/: app.py  environment.py
src/class_management_back/controller/: approval_controller.py  class_controller.py  data_controller.py  delivery_controller.py  frequency_controller.py  grade_controller.py  module_controller.py  progress_controller.py  user_controller.py
src/class_management_back/db/: config.py
src/class_management_back/exceptions/: log_data.py  user.py
src/class_management_back/helper/: parser.py  user.py
src/class_management_back/model/: approval_model.py  class_model.py  data_model.py  delivery_model.py  frequency_model.py  grade_model.py  module_model.py  progress_model.py  user_model.py
src/class_management_back/schema/: approval.py  common.py  data.py  delivery.py  frequency.py  grade.py  module.py  progress.py  user.py
src/class_management_back/service/: class_service.py  data_service.py  user_service.py
